frontend-mobile/export-log.txt
env: load .env
env: export APP_NAME APP_ENV
Starting Metro Bundler
SyntaxError: SyntaxError: C:\Users\ASUS\Desktop\copia_app\frontend-mobile\src\screens\InventarioDetalleScreen.jsx: Expected corresponding JSX closing tag for <LinearGradient>. (1571:8)

  1569 |             </TouchableOpacity>
  1570 |           </Modal>
> 1571 |         </View>
       |         ^
  1572 |         )
  1573 | }
  1574 |
SyntaxError: C:\Users\ASUS\Desktop\copia_app\frontend-mobile\src\screens\InventarioDetalleScreen.jsx: Expected corresponding JSX closing tag for <LinearGradient>. (1571:8)

  1569 |             </TouchableOpacity>
  1570 |           </Modal>
> 1571 |         </View>
       |         ^
  1572 |         )
  1573 | }
  1574 |
    at constructor (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:367:19)
    at FlowParserMixin.raise (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:6624:19)
    at FlowParserMixin.jsxParseElementAt (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:4756:16)
    at FlowParserMixin.jsxParseElementAt (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:4727:32)
    at FlowParserMixin.jsxParseElementAt (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:4727:32)
    at FlowParserMixin.jsxParseElement (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:4778:17)
    at FlowParserMixin.parseExprAtom (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:4788:19)
    at FlowParserMixin.parseExprSubscripts (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11145:23)
    at FlowParserMixin.parseUpdate (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11130:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11110:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10963:61)
    at FlowParserMixin.parseExprOps (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10968:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10945:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10895:21)
    at C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:3527:39
    at FlowParserMixin.tryParse (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:6932:20)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:3527:18)
    at C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10864:39
    at FlowParserMixin.allowInAnd (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12500:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10864:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12567:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11747:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:3620:18)
    at FlowParserMixin.parseExprAtom (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11395:23)
    at FlowParserMixin.parseExprAtom (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:4793:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11145:23)
    at FlowParserMixin.parseUpdate (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11130:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:11110:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10963:61)
    at FlowParserMixin.parseExprOps (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10968:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10945:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10895:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:3578:18)
    at FlowParserMixin.parseExpressionBase (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10848:23)
    at C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10844:39
    at FlowParserMixin.allowInAnd (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12495:16)
    at FlowParserMixin.parseExpression (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:10844:17)
    at FlowParserMixin.parseReturnStatement (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:13218:28)
    at FlowParserMixin.parseStatementContent (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12874:21)
    at FlowParserMixin.parseStatementLike (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12843:17)
    at FlowParserMixin.parseStatementLike (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:2945:24)
    at FlowParserMixin.parseStatementListItem (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12823:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:13392:61)
    at FlowParserMixin.parseBlockBody (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:13385:10)
    at FlowParserMixin.parseBlock (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:13373:10)
    at FlowParserMixin.parseFunctionBody (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12174:24)
    at C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:2919:63
    at FlowParserMixin.forwardNoArrowParamsConversionAt (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:3095:16)
    at FlowParserMixin.parseFunctionBody (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:2919:12)
    at FlowParserMixin.parseArrowExpression (C:\Users\ASUS\Desktop\copia_app\frontend-mobile\node_modules\@babel\parser\lib\index.js:12149:10)
